Commit All , Added shopping Cart and Payment integration

--- a/Nithin2003/Views/Admin/ApproveAsAdmin.cshtml
+++ b/Nithin2003/Views/Admin/ApproveAsAdmin.cshtml
@@ -39,6 +39,12 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link active" asp-controller="Cart" asp-action="TrackAllOrder">
+                            <i class="ni ni-money-coins"></i>
+                            <span class="nav-link-text">Shop Orders</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link active" asp-controller="Admin" asp-action="ApproveAsAdmin">
                             <i class="ni ni-money-coins"></i>
                             <span class="nav-link-text">Add Admin/Editor</span>
