--- a/Nithin2003/Views/DashBoard/Index.cshtml
+++ b/Nithin2003/Views/DashBoard/Index.cshtml
@@ -47,7 +47,7 @@
                             <li class="nav-item">
                                 <a class="nav-link active" asp-controller="Product" asp-action="Index">
                                     <i class="ni ni-money-coins"></i>
-                                    <span class="nav-link-text">Shopping Cart</span>
+                                    <span class="nav-link-text">Shop </span>
                                 </a>
                             </li>
                             <li class="nav-item">
@@ -136,6 +136,12 @@
                                 <a class="nav-link active" asp-controller="Admin" asp-action="UserstransactionHistory">
                                     <i class="ni ni-money-coins"></i>
                                     <span class="nav-link-text">All Transaction History</span>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-controller="Cart" asp-action="TrackAllOrder">
+                                    <i class="ni ni-money-coins"></i>
+                                    <span class="nav-link-text">Shop Orders</span>
                                 </a>
                             </li>
                             <li class="nav-item">
