--- a/Nithin2003/Views/Cart/Index.cshtml
+++ b/Nithin2003/Views/Cart/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Nithin2003.Models.Product_Item>
+﻿@model IEnumerable<Nithin2003.Models.CartItem>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_DashBoard.cshtml";
@@ -44,6 +44,18 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link active" asp-controller="Product" asp-action="Index">
+                                <i class="ni ni-money-coins"></i>
+                                <span class="nav-link-text">Shop</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" asp-controller="Cart" asp-action="TrackOrder">
+                                <i class="ni ni-money-coins"></i>
+                                <span class="nav-link-text">My Order Details</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link active" asp-controller="DashBoard" asp-action="UserLoanRequest">
                                 <i class="ni ni-money-coins"></i>
                                 <span class="nav-link-text">Request a Loan</span>
@@ -70,7 +82,7 @@
                                 <span class="nav-link-text">My Transaction History</span>
                             </a>
                         </li>
-                        @if (Context.Session.GetString("Manu") == "True")
+                        @* @if (Context.Session.GetString("Manu") == "True")
                         {
                             <li class="nav-item">
                                 <a class="nav-link active" asp-controller="Ajax" asp-action="Index">
@@ -80,7 +92,7 @@
                                 </a>
                             </li>
 
-                        }
+                        } *@
 
                         <li class="nav-item">
                             <a class="nav-link active" asp-controller="Users" asp-action="EditDetails" asp-route-Username="@Context.Session.GetString("Username")">
@@ -174,59 +186,67 @@
         </div>
     </div>
 </nav>
-    <!-- Main content -->
-    <div class="main-content" id="panel">
+<!-- Main content -->
+<div class="main-content" id="panel">
 
-        <!-- Header -->
-        <!-- Header -->
-        <div class="header bg-primary pb-6">
-            <div class="container-fluid">
-                <div class="header-body">
-                    <div class="row align-items-center py-4">
-                        <div class="col-lg-6 col-7">
-                            <h6 class="h2 text-white d-inline-block mb-0">Cart</h6>
-                            <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
-                                <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
-                                    <li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i></a></li>
-                                    <li class="breadcrumb-item"><a href="#">Cart</a></li>
-                                    @* <li class="breadcrumb-item active" aria-current="page">Table</li> *@
-                                </ol>
-                            </nav>
-                        </div>
-
+    <!-- Header -->
+    <!-- Header -->
+    <div class="header bg-primary pb-6">
+        <div class="container-fluid">
+            <div class="header-body">
+                <div class="row align-items-center py-4">
+                    <div class="col-lg-6 col-7">
+                        <h6 class="h2 text-white d-inline-block mb-0">Cart</h6>
+                        <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
+                            <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
+                                <li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i></a></li>
+                                <li class="breadcrumb-item"><a href="#">Cart</a></li>
+                                @* <li class="breadcrumb-item active" aria-current="page">Table</li> *@
+                            </ol>
+                        </nav>
                     </div>
+
                 </div>
             </div>
         </div>
-        <!-- Page content -->
-        <div class="container-fluid mt--6">
-            <div class="row">
-                <div class="col">
-                    <div class="card">
-                        <!-- Card header -->
-                        <div class="card-header border-0">
-                            <h3 class="mb-0">Cart Table</h3>
-                            <p>Account Balance: ₹@ViewBag.UserBalance</p>
-                        </div>
-                        <!-- Light table -->
-                        <div class="table-responsive">
-                            <table class="table align-items-center table-flush">
-                                <thead class="thead-light">
-                                    <tr>
-                                        <th>@Html.DisplayNameFor(model => model.Product.Name)</th>
+    </div>
+    <!-- Page content -->
+    <div class="container-fluid mt--6">
+        <div class="row">
+            <div class="col">
+                <div class="card">
+                    <!-- Card header -->
+                    <div class="card-header border-0">
+                        <h3 class="mb-0">Cart Table</h3>
+                        <p>Account Balance: ₹@ViewBag.UserBalance</p>
+                    </div>
+                    <!-- Light table -->
+                    <div class="table-responsive">
+                        <table class="table align-items-center table-flush">
+                            <thead class="thead-light">
+                                <tr>
+                                    @*  <th>@Html.DisplayNameFor(model => model.Product.Name)</th>
                                         <th>@Html.DisplayNameFor(model => model.Product.Price)</th>
-                                        <th>@Html.DisplayNameFor(model => model.Quantity)</th>
-                                        <th>Sub-Total</th>
-                                        <th></th>
-                                        <th></th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    @foreach (var cart in Model)
-                                    {
-                                        <tr>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => cart.Product.Name)
+                                        <th>@Html.DisplayNameFor(model => model.Quantity)</th> *@
+                                    <th>Product Name</th>
+                                    <th>Product Price</th>
+                                    <th>Product Quantity</th>
+                                    
+                                    <th></th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var cart in Model)
+                                {
+                                    <tr>
+                                        <td>@cart.ProductSku</td>
+                                        <td>@cart.Amount</td>
+                                        <td>@cart.Quantity</td>
+
+
+                                        @*  <td>
+                                                @Html.DisplayFor(modelItem => cart.Name)
                                             </td>
                                             <td>
                                                 @Html.DisplayFor(modelItem => cart.Product.Price)
@@ -236,68 +256,74 @@
                                             </td>
                                             <td>
                                                 @Html.DisplayFor(modelItem => (cart.SubTotal))
-                                            </td>
-                                            <td>
-                                                @Html.ActionLink("+", "Add", "Cart", new { sku = cart.Product.Sku }, new { @class = "btn btn-primary" })
-                                                @Html.ActionLink("-", "Minus", "Cart", new { sku = cart.Product.Sku }, new { @class = "btn btn-danger" })
+                                            </td> *@
+                                        <td>
+                                            <a asp-controller="Cart" asp-action="Minus" asp-route-sku="@cart.ProductSku" class="btn btn-danger">-</a>
+                                            <a asp-controller="Cart" asp-action="Add" asp-route-sku="@cart.ProductSku" class="btn btn-primary">+</a>
+                                            @* @Html.ActionLink("+", "Add", "Cart", new { sku = cart.Product.Sku }, new { @class = "btn btn-primary" })
+                                                @Html.ActionLink("-", "Minus", "Cart", new { sku = cart.Product.Sku }, new { @class = "btn btn-danger" }) *@
 
-                                            </td>
-                                            <td>
-                                                @Html.ActionLink("Remove", "Remove", "Cart", new { sku = cart.Product.Sku }, new { @class = "btn btn-danger" })
-                                            </td>
-                                        </tr>
-                                    }
-                                    <tr>
-                                        <td colspan="5" style="text-align:right">
-                                            Total: @ViewBag.total
                                         </td>
+                                         <td>
+                                               @*  @Html.ActionLink("Remove", "Remove", "Cart", new { sku = cart.Product.Sku }, new { @class = "btn btn-danger" }) *@
+                                            <a asp-controller="Cart" asp-action="Remove" asp-route-sku="@cart.ProductSku" class="btn btn-danger">Remove</a>
+                                            </td>
                                     </tr>
-                                </tbody>
-                            </table>
+                                }
+                                <tr>
+                                    <td colspan="5" style="text-align:right">
+                                        Total: @ViewBag.total
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
                         <h4>Total: ₹@ViewBag.Total</h4>
 
                         @if (ViewBag.Total > 0)
                         {
-                            <a class="btn btn-success" asp-action="Pay">Pay Now</a>
+                            <div>
+                                <a class="btn btn-success" asp-action="AddShippingDetails">Pay Now</a>
+                                <a class="btn btn-primary" asp-controller="Product" asp-action="Index">Back To Shop</a>
+                            </div>
                         }
 
                         @if (TempData["Message"] != null)
                         {
                             <p style="color: red">@TempData["Message"]</p>
                         }
-                        </div>
-
                     </div>
+
                 </div>
             </div>
-
-            <!-- Footer -->
-            <footer class="footer pt-0">
-                <div class="row align-items-center justify-content-lg-between">
-                    <div class="col-lg-6">
-                    </div>
-                    <div class="col-lg-6">
-                        <ul class="nav nav-footer justify-content-center justify-content-lg-end">
-
-                            <li>
-                                <a class="nav-link scrollto" asp-controller="Home" asp-action="ContactUs">Contact Us</a>
-                            </li>
-
-                        </ul>
-                    </div>
-                </div>
-            </footer>
         </div>
+
+        <!-- Footer -->
+        <footer class="footer pt-0">
+            <div class="row align-items-center justify-content-lg-between">
+                <div class="col-lg-6">
+                </div>
+                <div class="col-lg-6">
+                    <ul class="nav nav-footer justify-content-center justify-content-lg-end">
+
+                        <li>
+                            <a class="nav-link scrollto" asp-controller="Home" asp-action="ContactUs">Contact Us</a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </footer>
     </div>
-    <!-- Argon Scripts -->
-    <!-- Core -->
-    <script src="~/Argon-assets/vendor/jquery/dist/jquery.min.js"></script>
-    <script src="~/Argon-assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/Argon-assets/vendor/js-cookie/js.cookie.js"></script>
-    <script src="~/Argon-assets/vendor/jquery.scrollbar/jquery.scrollbar.min.js"></script>
-    <script src="~/Argon-assets/vendor/jquery-scroll-lock/dist/jquery-scrollLock.min.js"></script>
-    <!-- Argon JS -->
-    <script src="~/Argon-assets/js/argon.js?v=1.2.0"></script>
+</div>
+<!-- Argon Scripts -->
+<!-- Core -->
+<script src="~/Argon-assets/vendor/jquery/dist/jquery.min.js"></script>
+<script src="~/Argon-assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="~/Argon-assets/vendor/js-cookie/js.cookie.js"></script>
+<script src="~/Argon-assets/vendor/jquery.scrollbar/jquery.scrollbar.min.js"></script>
+<script src="~/Argon-assets/vendor/jquery-scroll-lock/dist/jquery-scrollLock.min.js"></script>
+<!-- Argon JS -->
+<script src="~/Argon-assets/js/argon.js?v=1.2.0"></script>
 
 
 
