--- a/Nithin2003/Views/Cart/TrackOrder.cshtml
+++ b/Nithin2003/Views/Cart/TrackOrder.cshtml
@@ -40,7 +40,7 @@
                             <li class="nav-item">
                                 <a class="nav-link active" asp-controller="Product" asp-action="Index">
                                     <i class="ni ni-money-coins"></i>
-                                    <span class="nav-link-text">Shopping Cart</span>
+                                    <span class="nav-link-text">Shop</span>
                                 </a>
                             </li>
                             <li class="nav-item">
@@ -132,7 +132,7 @@
                 <div class="header-body">
                     <div class="row align-items-center py-4">
                         <div class="col-lg-6 col-7">
-                            <h6 class="h2 text-white d-inline-block mb-0">My Orders</h6>
+                            <h6 class="h2 text-white d-inline-block mb-0">Orders</h6>
                             <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
                                 <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
                                     <li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i></a></li>
@@ -141,10 +141,7 @@
                                 </ol>
                             </nav>
                         </div>
-                        @* <div class="col-lg-6 col-5 text-right">
-                            <a href="#" class="btn btn-sm btn-neutral">New</a>
-                            <a href="#" class="btn btn-sm btn-neutral">Filters</a>
-                        </div> *@
+                       
                     </div>
                 </div>
             </div>
@@ -163,8 +160,8 @@
                             <table class="table align-items-center table-flush">
                                 <thead class="thead-light">
                                     <tr>
-                                        <th>Payment Id</th>
-                                        <th>User Name</th>
+                                        <th>Order Id</th>
+                                        <th>Order Status</th>
                                         <th>Amount</th>
                                         <th>Payment Date</th>                                        
 
@@ -186,7 +183,7 @@
                                             <td>
                                                 <span class="badge badge-dot mr-4">
                                                     <i class="bg-warning"></i>
-                                                    <span class="status">@users.Username</span>
+                                                    <span class="status">@users.OrderStatus</span>
                                                 </span>
                                             </td>
 
