--- a/Nithin2003/Views/DashBoard/MyLoginDetails.cshtml
+++ b/Nithin2003/Views/DashBoard/MyLoginDetails.cshtml
@@ -43,7 +43,7 @@
                             <li class="nav-item">
                                 <a class="nav-link active" asp-controller="Product" asp-action="Index">
                                     <i class="ni ni-money-coins"></i>
-                                    <span class="nav-link-text">Shopping Cart</span>
+                                    <span class="nav-link-text">Shop</span>
                                 </a>
                             </li>
                             <li class="nav-item">
