--- a/Nithin2003/Views/Product/Index.cshtml
+++ b/Nithin2003/Views/Product/Index.cshtml
@@ -39,7 +39,7 @@
                         <li class="nav-item">
                             <a class="nav-link active" asp-controller="Product" asp-action="Index">
                                 <i class="ni ni-money-coins"></i>
-                                <span class="nav-link-text">Shopping Cart</span>
+                                <span class="nav-link-text">Shop</span>
                             </a>
                         </li>
                         <li class="nav-item">
@@ -179,105 +179,111 @@
         </div>
     </div>
 </nav>
-    <!-- Main content -->
-    <div class="main-content" id="panel">
+<!-- Main content -->
+<div class="main-content" id="panel">
 
-        <!-- Header -->
-        <!-- Header -->
-        <div class="header bg-primary pb-6">
-            <div class="container-fluid">
-                <div class="header-body">
-                    <div class="row align-items-center py-4">
-                        <div class="col-lg-6 col-7">
-                            <h6 class="h2 text-white d-inline-block mb-0">Products Table</h6>
-                            <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
-                                <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
-                                    <li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i></a></li>
-                                    <li class="breadcrumb-item"><a href="#">Products</a></li>
-                                    @* <li class="breadcrumb-item active" aria-current="page">Table</li> *@
-                                </ol>
-                            </nav>
-                        </div>
-
+    <!-- Header -->
+    <!-- Header -->
+    <div class="header bg-primary pb-6">
+        <div class="container-fluid">
+            <div class="header-body">
+                <div class="row align-items-center py-4">
+                    <div class="col-lg-6 col-7">
+                        <h6 class="h2 text-white d-inline-block mb-0">Products Table</h6>
+                        <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
+                            <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
+                                <li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i></a></li>
+                                <li class="breadcrumb-item"><a href="#">Products</a></li>
+                                @* <li class="breadcrumb-item active" aria-current="page">Table</li> *@
+                            </ol>
+                        </nav>
                     </div>
+
                 </div>
             </div>
-        </div>
-        <!-- Page content -->
-        <div class="container-fluid mt--6">
-            <div class="row">
-                <div class="col">
-                    <div class="card">
-                        <!-- Card header -->
-                        <div class="card-header border-0">
-                            <h3 class="mb-0">Product Table</h3>
-                        </div>
-                        <!-- Light table -->
-                        <div class="table-responsive">
-                            <table class="table align-items-center table-flush">
-                                <thead class="thead-light">
-                                    <tr>
-                                        <th>Name</th>
-                                        <th>Image</th>
-                                        <th>Price</th>
-
-                                        <th></th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    @foreach (var product in Model) //loop through the products
-                                    {
-                                        <tr>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => product.Name)
-                                            </td>
-                                            <td>
-                                                <img src="~/Argon-assets/img/@product.ImageUrl" alt="@product.Name" style="width: 100px; height: auto;" asp-append-version="true" />
-
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => product.Price)
-                                            </td>
-                                            <td>
-                                                @Html.ActionLink("Buy", "Buy", "Cart", new { sku = product.Sku }, new { @class = "btn btn-primary" })
-                                            </td>
-                                        </tr>
-                                    }
-                                </tbody>
-                            </table>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-
-            <!-- Footer -->
-            <footer class="footer pt-0">
-                <div class="row align-items-center justify-content-lg-between">
-                    <div class="col-lg-6">
-                    </div>
-                    <div class="col-lg-6">
-                        <ul class="nav nav-footer justify-content-center justify-content-lg-end">
-
-                            <li>
-                                <a class="nav-link scrollto" asp-controller="Home" asp-action="ContactUs">Contact Us</a>
-                            </li>
-
-                        </ul>
-                    </div>
-                </div>
-            </footer>
         </div>
     </div>
-    <!-- Argon Scripts -->
-    <!-- Core -->
-    <script src="~/Argon-assets/vendor/jquery/dist/jquery.min.js"></script>
-    <script src="~/Argon-assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/Argon-assets/vendor/js-cookie/js.cookie.js"></script>
-    <script src="~/Argon-assets/vendor/jquery.scrollbar/jquery.scrollbar.min.js"></script>
-    <script src="~/Argon-assets/vendor/jquery-scroll-lock/dist/jquery-scrollLock.min.js"></script>
-    <!-- Argon JS -->
-    <script src="~/Argon-assets/js/argon.js?v=1.2.0"></script>
+    <!-- Page content -->
+    <div class="container-fluid mt--6">
+        <div class="row">
+            <div class="col">
+                <div class="card">
+                    <!-- Card header -->
+                    <div class="card-header border-0">
+                        @*  <h3 class="mb-0">Product Table</h3>  *@                      
+
+                        
+                       
+                    </div>
+                    <!-- Light table -->
+                    <div class="table-responsive">
+                        <table class="table align-items-center table-flush">
+                            <thead class="thead-light">
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Image</th>
+                                    <th>Price</th>
+
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var product in Model) //loop through the products
+                                {
+                                    <tr>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => product.Name)
+                                        </td>
+                                        <td>
+                                            <img src="~/Argon-assets/img/@product.ImageUrl" alt="@product.Name" style="width: 100px; height: auto;" asp-append-version="true" />
+
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => product.Price)
+                                        </td>
+                                        <td>
+                                            @Html.ActionLink("Add To Cart", "AddToCart", "Cart", new { sku = product.Sku }, new { @class = "btn btn-info" })
+                                        </td>
+                                        <td>
+                                            @Html.ActionLink("Buy", "Buy", "Cart", new { sku = product.Sku }, new { @class = "btn btn-primary" })
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <!-- Footer -->
+        <footer class="footer pt-0">
+            <div class="row align-items-center justify-content-lg-between">
+                <div class="col-lg-6">
+                </div>
+                <div class="col-lg-6">
+                    <ul class="nav nav-footer justify-content-center justify-content-lg-end">
+
+                        <li>
+                            <a class="nav-link scrollto" asp-controller="Home" asp-action="ContactUs">Contact Us</a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </footer>
+    </div>
+</div>
+<!-- Argon Scripts -->
+<!-- Core -->
+<script src="~/Argon-assets/vendor/jquery/dist/jquery.min.js"></script>
+<script src="~/Argon-assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="~/Argon-assets/vendor/js-cookie/js.cookie.js"></script>
+<script src="~/Argon-assets/vendor/jquery.scrollbar/jquery.scrollbar.min.js"></script>
+<script src="~/Argon-assets/vendor/jquery-scroll-lock/dist/jquery-scrollLock.min.js"></script>
+<!-- Argon JS -->
+<script src="~/Argon-assets/js/argon.js?v=1.2.0"></script>
 
 
 
